# 2020-fall-self-driving-car

./: README.md
mid-compe/: CMakeLists.txt  package.xml  submit_1.csv  submit_2.csv  submit_3.csv
mid-compe/launch/: com1.launch  com2.launch  com3.launch
mid-compe/rviz/: demo1.rviz  demo2.rviz  demo3.rviz
mid-compe/src/: localization1.cpp  localization2.cpp  localization3.cpp
